--- a/vignettes/foram_intro.Rmd
+++ b/vignettes/foram_intro.Rmd
@@ -31,9 +31,18 @@ lf_out <- load_foram(foram_data = "path/to/your/file.csv")
 
 Blanks or 'NAs' are okay in your data - you do not need to have every measurement for each sample. You can have repeat sample ages for replicates etc., and you may provide d11B data from multiple species (just indicate which modern species', or 'custom', calibration you'd like to use for each row in d11Bspec). 
 ```{r}
-file1 = read.csv(system.file("extdata", "PETM_VignetteData.csv", package = "BPER"))
+#file1 = read.csv(system.file("extdata", "PETM_VignetteData.csv", package = "BPER"))
 
-lf_out <- load_foram(foram_data = file1)
+x <- data.frame(c(55956, 55956, 55954, 55932, 55926, 55924, 55901, 55899), 
+                c(14.61, 15.46, NA, 14.49, 14.11, NA, 14.46, 13.94), 
+                c(0.23, 0.22, NA, 0.34, 0.33, NA, 0.21, 0.29), 
+                c("Tsac", "Grub", NA, "Grub", "Tsac", NA, "Grub", "Tsac"), 
+                c(3.26, NA, 3.33, 5.04, NA, 4.83, NA, NA), 
+                c(0.1, NA, 0.1, 0.15, NA, 0.14, NA, NA), 
+                c(NA, NA, NA, -2.14, NA, -1.98, -2.19, -1.99), 
+                c(NA, NA, NA, 0.16, NA, 0.16, 0.16, 0.16))
+
+lf_out <- load_foram(foram_data = x)
 ```
 
 
