post_plot_ind update

--- a/vignettes/foram_intro.Rmd
+++ b/vignettes/foram_intro.Rmd
@@ -26,7 +26,7 @@ The input data should be formatted with 8 columns and n row(s), with columns ord
 
 You must indicate which modern species' d11B vital effects are to be applied for each row of d11B data - this goes in the d11Bspec column. Use abbreviations including: 'Grub' (G. ruber), 'Tsac' (T. sacculifer), 'Ouni' (O. universa), 'custom' (specify values below using 'priors_foram_adj' function), or 'borate'.
 
-Now let's run the 'load_foram' function on the input data and save the output as an object called 'lf_out' (this will be a list) in the global environment. Here, we'll use low resolution PETM data as an example, and load it as a .csv file. Here, I will need to load a package system .csv file, but for normal .csv data loading, simply provide the file path from the directory in quotes for the 'foram_data' argument in the 'load_foram' function. For example, when you use this function on other data stored as .csv, you would instead type: 
+Now let's run the 'load_foram' function on the input data and save the output as an object called 'lf_out' (this will be a list) in the global environment. Here, we'll use low resolution PETM data as an example, and load it directly as a data frame. But, you can also load from a .csv or .xlsx. Simply provide the file path from the directory in quotes for the 'foram_data' argument in the 'load_foram' function instead of a data frame. For example, when you use this function on other data stored as .csv, you would instead type: 
 lf_out <- load_foram(foram_data = "path/to/your/file.csv")
 
 Blanks or 'NAs' are okay in your data - you do not need to have every measurement for each sample. You can have repeat sample ages for replicates etc., and you may provide d11B data from multiple species (just indicate which modern species', or 'custom', calibration you'd like to use for each row in d11Bspec). 
